--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,9 @@
   },
   // plugins eslint-plugin-prettier로 prettier을 적용
   "plugins": ["@typescript-eslint", "prettier"],
-  "rules": {},
+  "rules": {
+    "max-lines-per-function": ["error", 9],
+    "max-depth": ["error", 2]
+  },
   "ignorePatterns": ["./tsconfig.json", "./jest.config.json", ".eslintrc"]
 }
