--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix"
+    "eslint": "eslint",
+    "eslint:fix": "eslint --fix",
+    "typescript" : "tsc -p ./tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -24,5 +25,8 @@
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5"
+  },
+  "dependencies": {
+    "typescript": "^4.9.5"
   }
 }
