--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "hi main3",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "eslint": "eslint",
     "eslint:fix": "eslint --fix",
-    "typescript" : "tsc -p ./tsconfig.json"
+    "typescript": "tsc -p ./tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -20,11 +20,17 @@
   },
   "homepage": "https://github.com/aptakqmf12/twdash#readme",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
+    "babel-jest": "^29.4.3",
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5"
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.4.3"
   },
   "dependencies": {
     "typescript": "^4.9.5"
