--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "outDir": "dist",
     "jsx" : "preserve"
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx","src/**/*.test.ts"],
   "exclude": ["node_modules"],
 
 }
