--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "hi main3",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "eslint": "eslint",
@@ -20,19 +21,18 @@
   },
   "homepage": "https://github.com/aptakqmf12/twdash#readme",
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
-    "babel-jest": "^29.4.3",
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "jest": "^29.4.3"
+    "eslint-plugin-jest": "^27.2.1",
+    "jest": "^29.4.3",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "typescript": "^4.9.5"
+    "ts-node": "^10.9.1"
   }
 }
