--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target" : "ES2015",
-    "module": "system",
+    "module": "ES2015",
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
@@ -11,7 +11,7 @@
     "outDir": "dist",
     "jsx" : "preserve"
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx","src/**/*.test.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx","src/**/*.test.ts", "./jest.config.ts"],
   "exclude": ["node_modules"],
 
 }
