--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.4.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "prettier": "^2.8.4",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
-    "ts-node": "^10.9.1"
+   
   }
 }
